Fix warnings from IDE